results/SpecGenBench/2-shot/log-UniqueNumNested-2023_11_28_03_42_53.txt
public class UniqueNumNested {

    //@ requires 0 < arr.length;
    //@ ensures \result == -1 || (0 <= \result && \result < arr.length && (\forall int i; 0 <= i && i < \result; arr[\result] != arr[i]));
    public static int uniqueNum(int[] arr) {
        //@ maintaining 0 <= i && i <= arr.length;
        //@ maintaining (\forall int k; 0 <= k && k < i; arr[i] != arr[k]);
        //@ decreases arr.length - i;
        for (int i = 0; i < arr.length; ++i) {
            //@ maintaining i + 1 <= j && j <= arr.length;
            //@ maintaining (\forall int k; i + 1 <= k && k < j; arr[i] != arr[k]);
            //@ decreases arr.length - j;
            for (int j = i + 1; j < arr.length; ++j) {
                if(arr[i] == arr[j])
                    break;
            }
            if(j == arr.length)
                return i;
        }
        return -1;
    }
    
}
/home/max/Documents/JMLGPT/tmp/UniqueNumNested.java:17: error: cannot find symbol
            if(j == arr.length)
               ^
  symbol:   variable j
  location: class UniqueNumNested
1 error

